@@ -2,8 +2,9 @@ Version 3.9.30
 - Fixed some floating point parsing issues
 - Added some missing C stdio functions
 - In listing files update the COG address for RES statements
-- Reduce use of COG memory in P2
-- Fix some bad formatting in __builtin_printf
+- Reduced use of COG memory in P2
+- Fixed some bad formatting in __builtin_printf
+- Fixed a bug in BASIC parsing of empty lines
 
 Version 3.9.29
 - Implemented concrete classes in BASIC
